<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:id="@+id/scrollview"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:transitionName="@string/activity_trans"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:showIn="@layout/activity_detail"
                                            tools:context="com.cuong.futurenav.activity.DetailActivity">


        <GridLayout
            android:id="@+id/gridlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/schoolname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:text="New Text"
                android:textSize="@dimen/abc_text_size_large_material"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="1"
                android:text="This school is the best of the best of the best." />

            <TextView
                android:id="@+id/labelwebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/schoollabel_website" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:autoLink="web"
                android:text="www.google.com" />

            <TextView
                android:id="@+id/labellevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/schoollabel_level" />

            <TextView
                android:id="@+id/levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:text="High School" />

            <TextView
                android:id="@+id/labeltype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/schoollabel_type" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="4"
                android:text="Private" />

            <TextView
                android:id="@+id/labelgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/schoollabel_gender" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="5"
                android:text="Both" />

            <TextView
                android:id="@+id/labelclasssize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/schoollabel_classsize" />

            <TextView
                android:id="@+id/classsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="6"
                android:text="20" />

            <TextView
                android:id="@+id/labelratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="7"
                android:text="@string/schoollabel_ratio" />

            <TextView
                android:id="@+id/ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="7"
                android:text="2.3" />

            <TextView
                android:id="@+id/labelnostudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="8"
                android:text="@string/schoollabel_nostudent" />

            <TextView
                android:id="@+id/nostudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="8"
                android:text="20" />

            <TextView
                android:id="@+id/labelsat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="9"
                android:text="@string/schoollabel_sat" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="9"
                android:text="890" />

            <TextView
                android:id="@+id/labeltuition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="10"
                android:text="@string/schoollabel_tuition" />

            <TextView
                android:id="@+id/tuition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="10"
                android:text="$18,500" />

            <TextView
                android:id="@+id/labelcontact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="11"
                android:text="@string/schoollabel_contactnumber" />

            <TextView
                android:id="@+id/contactnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="11"
                android:autoLink="phone"
                android:text="3037611764" />

            <TextView
                android:id="@+id/labellabelemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="12"
                android:text="@string/schoollabel_email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="12"
                android:autoLink="email"
                android:text="mcguire@mullenhigh.com" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_row="13"
                android:text="3602 S. Lowell Blvd, Denver, CO 50236" />


        </GridLayout>


</android.support.v4.widget.NestedScrollView>
